--- a/src/components/Item.module.scss
+++ b/src/components/Item.module.scss
@@ -1,14 +1,18 @@
 @import '../styles/colors.scss';
+@import '../styles/basics.scss';
 
 .container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   margin: 1rem;
   padding: 1rem;
-  text-align: center;
+  border: 1px solid $dark-grey;
+  border-radius: 1rem;
 
   .information {
-    padding: 2rem;
-
+    margin-bottom: 1rem;
     .name {
       margin-bottom: 1rem;
       font-size: 2rem;
@@ -22,5 +26,8 @@
     .price {
       font-size: 1.5rem;
     }
+  }
+  .btn {
+    @extend %btn;
   }
 }
