--- a/src/components/ItemCount.module.scss
+++ b/src/components/ItemCount.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/colors.scss';
+@import '../styles/basics.scss';
 
 .container {
   display: flex;
@@ -27,5 +28,8 @@
       border: none;
       text-align: center;
     }
+  }
+  .btn {
+    @extend %btn;
   }
 }
